# bazel-demo

./: .bazelrc  .editorconfig  .gitignore  .prettierrc  BUILD.bazel  Note.md  WORKSPACE  index.html  index.tsx  package.json  tsconfig.json  types.d.ts  webpack.config.js
