package(default_visibility = ["//visibility:public"])

exports_files(
    ["tsconfig.json"],
    visibility = ["//visibility:public"],
)

load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@npm//live-server:index.bzl", "live_server")
load("@npm//sass:index.bzl", "sass")

# load("@npm//typescript:index.bzl", "tsc")
load("@npm//webpack-cli:index.bzl", webpack = "webpack_cli")

sass(
    name = "styles",
    outs = ["styles.css"],
    args = [
        "$(location styles.scss)",
        "$(location styles.css)",
    ],
    data = ["styles.scss"],
)

# tsc(
#     name = "compile",
#     outs = ["index.js"],
#     args = [
#         "$(location index.tsx)",
#         "$(location types.d.ts)",
#         "--outDir",
#         "$(RULEDIR)",
#         "--lib",
#         "es2015,dom",
#         "--jsx",
#         "react",
#     ],
#     data = [
#         "index.tsx",
#         "types.d.ts",
#         "@npm//@types",
#         "@npm//csstype",
#     ],
# )

# https://bazelbuild.github.io/rules_nodejs/TypeScript.html
ts_library(
    name = "compile",
    srcs = ["index.tsx"],
    deps = [
        "@npm//@types/node",
        "@npm//@types/react",
        "@npm//@types/react-dom",
        # "//path/to/other:library",
    ],
)

filegroup(
    name = "index.js",
    srcs = ["compile"],
    # Change to es6_sources to get the 'prodmode' JS
    output_group = "es6_sources",
)

# -------------
webpack(
    name = "bundle",
    outs = ["app.bundle.js"],
    args = [
        "$(location index.js)",
        "--config",
        "$(location webpack.config.js)",
        "-o",
        "$@",
    ],
    data = [
        "index.js",
        "styles.css",
        "webpack.config.js",
        "@npm//:node_modules",
    ],
)

# Note, on Windows you need `--enable_runfiles`
live_server(
    name = "server",
    data = [
        "app.bundle.js",
        "index.html",
    ],
    templated_args = ["."],
)
