package(default_visibility = ["//visibility:public"])

exports_files(
    ["tsconfig.json"],
    visibility = ["//visibility:public"],
)

load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@npm//live-server:index.bzl", "live_server")
load("@npm//sass:index.bzl", "sass")
load("@npm//webpack-cli:index.bzl", webpack = "webpack_cli")

sass(
    name = "styles",
    outs = ["styles.css"],
    args = [
        "$(location styles.scss)",
        "$(location styles.css)",
    ],
    data = ["styles.scss"],
)

# https://bazelbuild.github.io/rules_nodejs/TypeScript.html
ts_library(
    name = "compile",
    srcs = [
        "index.tsx",
        "types.d.ts",
    ],
    deps = [
        "@npm//@types/node",
        "@npm//@types/react",
        "@npm//@types/react-dom",
        "@npm//csstype",
    ],
)

filegroup(
    name = "index.js",
    srcs = ["compile"],
    # Change to es6_sources to get the 'prodmode' JS
    output_group = "es6_sources",
)

# -------------
webpack(
    name = "bundle",
    outs = ["app.bundle.js"],
    args = [
        "$(locations //:index.js)",
        "--config",
        "$(location webpack.config.js)",
        "-o",
        "$@",
        "--mode",
        "development",
        "--hot",
    ],
    data = [
        "index.js",
        "styles.css",
        "webpack.config.js",
        "@npm//:node_modules",
    ],
)

# Note, on Windows you need `--enable_runfiles`
live_server(
    name = "server",
    data = [
        "app.bundle.js",
        "index.html",
    ],
    templated_args = ["."],
)
